Add integration tests for AWS2 Translate component
This commit adds integration tests for the AWS2 Translate component, using WireMock to mock the AWS service as it is not supported by LocalStack Community Edition. It also improves core AWS test support to handle mock backends more robustly when LocalStack is skipped.

- Added integration tests for aws2-translate
- Introduced WireMock to mock TranslateText operation
- Improved Aws2TestResource to bypass LocalStack for unsupported services
- Exported credentials in Aws2TestEnvContext for mock backends
- Registered AWS SDK Translate execution interceptors for runtime reflection