@@ -17,6 +17,7 @@
 package org.apache.camel.quarkus.component.aws2.translate.deployment;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
@@ -34,7 +35,8 @@ class Aws2TranslateProcessor {
     public static final String AWS_SDK_APPLICATION_ARCHIVE_MARKERS = "software/amazon/awssdk";
 
     private static final List<String> INTERCEPTOR_PATHS = List.of(
-            "software/amazon/awssdk/global/handlers/execution.interceptors");
+            "software/amazon/awssdk/global/handlers/execution.interceptors",
+            "software/amazon/awssdk/services/translate/execution.interceptors");
 
     private static final DotName EXECUTION_INTERCEPTOR_NAME = DotName.createSimple(ExecutionInterceptor.class.getName());
 
@@ -53,7 +55,7 @@ class Aws2TranslateProcessor {
         List<String> knownInterceptorImpls = combinedIndexBuildItem.getIndex()
                 .getAllKnownImplementations(EXECUTION_INTERCEPTOR_NAME)
                 .stream()
-                .map(c -> c.name().toString()).toList();
+                .map(c -> c.name().toString()).collect(Collectors.toList());
 
         reflectiveClasses.produce(
                 ReflectiveClassBuildItem.builder(knownInterceptorImpls.toArray(new String[knownInterceptorImpls.size()]))
